data/all_generated_tests/raw_wast_tests/br_if_ImproperFunctionCallorReturnHandling_1815.wast
;; 6. **Test Description:** Use nested `call` and `call_indirect` instructions within nested blocks, applying `br_if` to test the unwinding and maintaining of multiple operand stack states.    - **Constraint:** Validating nested control structure handling and stack state integrity across calls.    - **Improper Handling:** Incorrect operand stack handling across multiple function call layers.

(assert_invalid
  (module
    (type $t0 (func (result i32)))
    (table funcref)
    (elem (i32.const 0) $f1)
    (func $f1 (result i32) (i32.const 42))
    (func $type_nested_calls
      (block
        (call $f1)
        (block
          (br_if 1 (i32.const 1))
          (call_indirect (type $t0) (i32.const 0))
        )
      )
    )
  )
  "type mismatch"
)